# CSForecast

./: .gitignore  Makefile  README.md  pyproject.toml
data/metadata/: player_metadata.json
results/: evaluation_results.csv  statistical_tests.csv
scripts/: __init__.py  download_data.py  evaluate_models.py  preprocess_data.py  train_models.py
src/csgo_forecasting/: __init__.py
src/csgo_forecasting/data/: preprocessing.py  scraper.py
src/csgo_forecasting/evaluation/: __init__.py  evaluator.py  metrics.py
src/csgo_forecasting/models/: __init__.py  arima.py  base.py  classical.py  ets.py  gru.py  lstm.py  random_walk.py  transformer.py
src/csgo_forecasting/training/: __init__.py  early_stopping.py  torch.py  trainer.py
